Fixed ai and disappearing items